Add F# class parser.
Detects classes and methods using navigation items from the F# TypeChecker doing an untyped parse.
No namespace support.

--- a/src/FSharpFormsDesigner.Tests/FSharpFormsDesigner.Tests.csproj
+++ b/src/FSharpFormsDesigner.Tests/FSharpFormsDesigner.Tests.csproj
@@ -1,37 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" DefaultTargets="Build">
   <PropertyGroup>
-    <ProjectGuid>{AC8FE097-5299-4F7E-A0A3-CC244F7E6891}</ProjectGuid>
+    <ProjectGuid>{70C91091-A6FF-4E82-9E2F-33A06E64A4F2}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Library</OutputType>
-    <RootNamespace>ICSharpCode.FSharpFormsDesigner</RootNamespace>
-    <AssemblyName>FSharpFormsDesigner</AssemblyName>
+    <RootNamespace>FSharpFormsDesigner.Tests</RootNamespace>
+    <AssemblyName>FSharpFormsDesigner.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
-    <NoStdLib>False</NoStdLib>
-    <WarningLevel>4</WarningLevel>
-    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Platform)' == 'AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <RegisterForComInterop>False</RegisterForComInterop>
-    <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
-    <BaseAddress>4194304</BaseAddress>
-    <FileAlignment>4096</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-    <OutputPath>..\..\..\SharpDevelop\AddIns\DisplayBindings\FSharpFormsDesigner</OutputPath>
-    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\Debug\</OutputPath>
+    <DebugSymbols>True</DebugSymbols>
     <DebugType>Full</DebugType>
     <Optimize>False</Optimize>
     <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-    <OutputPath>..\..\..\SharpDevelop\AddIns\DisplayBindings\FSharpFormsDesigner</OutputPath>
-    <DebugSymbols>false</DebugSymbols>
+    <OutputPath>bin\Release\</OutputPath>
+    <DebugSymbols>False</DebugSymbols>
     <DebugType>None</DebugType>
     <Optimize>True</Optimize>
     <CheckForOverflowUnderflow>False</CheckForOverflowUnderflow>
@@ -40,7 +32,6 @@
   <ItemGroup>
     <Reference Include="FormsDesigner">
       <HintPath>..\..\lib\FormsDesigner.dll</HintPath>
-      <Private>False</Private>
     </Reference>
     <Reference Include="FSharp.Compiler">
       <HintPath>..\..\lib\FSharp.Compiler.dll</HintPath>
@@ -50,52 +41,40 @@
     </Reference>
     <Reference Include="ICSharpCode.Core">
       <HintPath>..\..\lib\ICSharpCode.Core.dll</HintPath>
-      <Private>False</Private>
+    </Reference>
+    <Reference Include="ICSharpCode.NRefactory">
+      <HintPath>..\..\lib\ICSharpCode.NRefactory.dll</HintPath>
     </Reference>
     <Reference Include="ICSharpCode.Scripting">
       <HintPath>..\..\lib\ICSharpCode.Scripting.dll</HintPath>
-      <Private>False</Private>
     </Reference>
     <Reference Include="ICSharpCode.SharpDevelop">
       <HintPath>..\..\lib\ICSharpCode.SharpDevelop.dll</HintPath>
-      <Private>False</Private>
     </Reference>
     <Reference Include="ICSharpCode.SharpDevelop.Dom">
       <HintPath>..\..\lib\ICSharpCode.SharpDevelop.Dom.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.framework">
+      <HintPath>..\..\lib\nunit.framework.dll</HintPath>
+    </Reference>
+    <Reference Include="Rhino.Mocks">
+      <HintPath>..\..\lib\Rhino.Mocks.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Design" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FSharpClass.cs" />
-    <Compile Include="FSharpClassParser.cs" />
-    <Compile Include="FSharpCodeDomSerializer.cs" />
-    <Compile Include="FSharpComponentWalker.cs" />
-    <Compile Include="FSharpFormsDesignerDisplayBinding.cs" />
-    <Compile Include="FSharpFormsDesignerGenerator.cs" />
-    <Compile Include="FSharpFormsDesignerLoader.cs" />
-    <Compile Include="FSharpFormsDesignerLoaderProvider.cs" />
-    <Compile Include="FSharpFormsDesignerView.cs" />
-    <Compile Include="FSharpNavigationItemsParser.cs" />
-    <Compile Include="FSharpParser.cs" />
+    <Compile Include="FSharpParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Templates" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="FSharpFormsDesigner.addin">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="Templates\WinFormsProject.xpt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <ProjectReference Include="..\FSharpFormsDesigner\FSharpFormsDesigner.csproj">
+      <Project>{AC8FE097-5299-4F7E-A0A3-CC244F7E6891}</Project>
+      <Name>FSharpFormsDesigner</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
