--- a/src/FSharpFormsDesigner/FSharpFormsDesigner.csproj
+++ b/src/FSharpFormsDesigner/FSharpFormsDesigner.csproj
@@ -52,6 +52,10 @@
       <HintPath>..\..\lib\ICSharpCode.Core.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="ICSharpCode.NRefactory">
+      <HintPath>..\..\lib\ICSharpCode.NRefactory.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="ICSharpCode.Scripting">
       <HintPath>..\..\lib\ICSharpCode.Scripting.dll</HintPath>
       <Private>False</Private>
@@ -62,6 +66,7 @@
     </Reference>
     <Reference Include="ICSharpCode.SharpDevelop.Dom">
       <HintPath>..\..\lib\ICSharpCode.SharpDevelop.Dom.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
@@ -73,6 +78,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DeclarationItemExtensions.cs" />
     <Compile Include="FSharpClass.cs" />
     <Compile Include="FSharpClassParser.cs" />
     <Compile Include="FSharpCodeDomSerializer.cs" />
@@ -82,8 +88,10 @@
     <Compile Include="FSharpFormsDesignerLoader.cs" />
     <Compile Include="FSharpFormsDesignerLoaderProvider.cs" />
     <Compile Include="FSharpFormsDesignerView.cs" />
+    <Compile Include="FSharpMethod.cs" />
     <Compile Include="FSharpNavigationItemsParser.cs" />
     <Compile Include="FSharpParser.cs" />
+    <Compile Include="IRegions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
